Added Music toggle

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     <div class="body">
+        <p>Music: </p>
+        <label class="switch box">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
         <div id="scoreBox">Score: 0</div>
         <div id="hiscoreBox">Hi-score: 0</div>
         <div id="board">
-            
         </div>
     </div>
 </body>
